<resources>

    <!-- Main screen -->
    <string name="app_name">Weather</string>
    <string name="city_name_main_screen">Novosibirsk</string>
    <string name="city_weather_main_screen">-3°C</string>
    <string name="searchButtonText">Settings</string>
    <string name="site">Site</string>

    <!-- Settings screen -->
    <string name="Back">Back</string>
    <string name="other">Other</string>
    <string name="cities">Cities</string>
    <string name="set_view_parameters">Set view parameters</string>

    <!-- Dictionaries -->
    <string name="wind_speed">Wind speed</string>
    <string name="air_pressure">Air pressure</string>
    <string name="air_humidity">Air humidity</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="moscow">Moscow</string>
    <string name="saint_petersburg">St. Petersburg</string>

</resources>