<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewSettingsBlockName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/set_view_parameters" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/wind_speed" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxAirPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/air_pressure" />

        <CheckBox
            android:id="@+id/checkBoxAirHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air_humidity" />

        <TextView
            android:id="@+id/textViewCitiesBlockName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cities" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonMoscow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moscow" />

            <RadioButton
                android:id="@+id/radioButtonSaintPetersburg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saint_petersburg" />

            <RadioButton
                android:id="@+id/radioButtonOtherCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/other" />

        </RadioGroup>

        <EditText
            android:id="@+id/changeCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novosibirsk" />

        <Button
            android:id="@+id/buttonBackToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Back" />

    </LinearLayout>

</ScrollView>