<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/image_of_city_on_main_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/novosibirsk"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/buttonSetingsOnMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/searchButtonText"
            app:layout_constraintStart_toStartOf="@id/image_of_city_on_main_screen"
            app:layout_constraintTop_toBottomOf="@id/image_of_city_on_main_screen" />

        <Button
            android:id="@+id/browser_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/site"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_of_city_on_main_screen"  />


        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonSetingsOnMainScreen"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/city_name_main_screen"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/weatherMainScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cityName"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/city_weather_main_screen"
            android:textSize="60sp" />

            <LinearLayout
                android:id="@+id/linear_layout_humidity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherMainScreen"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/air_humidity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="98%" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_wind_speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_humidity"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/wind_speed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layuot_pressure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_wind_speed"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/air_pressure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="765" />
            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>